@@ -1,0 +1,86 @@
+<?php /* $Id$ */
+ /* From: forum-userid= carlandtracey.com  url= carlandtracey.com/pix
+    Converted to html_wrap/frames format by mindless */ ?>
+<?php
+$name = _("Spiral Notebook");
+$description = _("A white shadowed frame with spiral notebook binding on the left side");
+
+/* TTL */
+$imageTTL = "TT.gif";
+$widthTTL = 1;
+$heightTTL = 14;
+
+/* TTR */
+$imageTTR = "TT.gif";
+$widthTTR = 1;
+$heightTTR = 14;
+
+/* LLT */
+$imageLLT = "LL.gif";
+$widthLLT = 30;
+$heightLLT = 1;
+
+/* RRT */
+$imageRRT = "RR.gif";
+$widthRRT = 15;
+$heightRRT = 1;
+
+/* LLB */
+$imageLLB = "LL.gif";
+$widthLLB = 30;
+$heightLLB = 1;
+
+/* RRB */
+$imageRRB = "RR.gif";
+$widthRRB = 15;
+$heightRRB = 1;
+
+/* BBL */
+$imageBBL = "BB.gif";
+$widthBBL = 1;
+$heightBBL = 15;
+
+/* BBR */
+$imageBBR = "BB.gif";
+$widthBBR = 1;
+$heightBBR = 15;
+
+/* TL Top left */
+$imageTL = "TL.gif";
+$widthTL = 30;
+$heightTL = 14;
+
+/* TT Top */
+$imageTT = "TT.gif";
+$widthTT = 1;
+$heightTT = 14;
+
+/* TR Top right */
+$imageTR = "TR.gif";
+$widthTR = 15;
+$heightTR = 14;
+
+/* LL Left side */
+$imageLL = "LL.gif";
+$widthLL = 30;
+$heightLL = 1;
+
+/* RR Right side */
+$imageRR = "RR.gif";
+$widthRR = 15;
+$heightRR = 1;
+
+/* BL Bottom left */
+$imageBL = "BL.gif";
+$widthBL = 30;
+$heightBL = 15;
+
+/* BB Bottom */
+$imageBB = "BB.gif";
+$widthBB = 1;
+$heightBB = 15;
+
+/* BR Bottom Right */
+$imageBR = "BR.gif";
+$widthBR = 15;
+$heightBR = 15;
